outputs_20260326-112231-85b57cd7/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity.h:22,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G2_002_init_applies_initial_duty_and_deadtime':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:101:61: error: 'mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising' undeclared (first use in this function); did you mean 'mock_IfxGtm_Pwm_updateChannelDeadTimeImmediate_lastDtRising'?
  101 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_RISING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "init: U phase rising deadtime should be 1000 ns");
      |                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:101:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  101 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_RISING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "init: U phase rising deadtime should be 1000 ns");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:101:61: note: each undeclared identifier is reported only once for each function it appears in
  101 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_RISING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "init: U phase rising deadtime should be 1000 ns");
      |                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:101:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  101 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_RISING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtRising[0], "init: U phase rising deadtime should be 1000 ns");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:105:62: error: 'mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling' undeclared (first use in this function); did you mean 'mock_IfxGtm_Pwm_updateChannelDeadTimeImmediate_lastDtFalling'?
  105 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_FALLING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "init: U phase falling deadtime should be 1000 ns");
      |                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:105:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  105 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(UT_DEADTIME_FALLING_NS, mock_IfxGtm_Pwm_updateChannelsDeadTimeImmediate_lastDtFalling[0], "init: U phase falling deadtime should be 1000 ns");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_002_no_led_toggle_during_init_or_without_isr':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:172:42: error: implicit declaration of function 'mock_IfxPort_togglePin_getCallCount'; did you mean 'mock_togglePin_getCallCount'? [-Wimplicit-function-declaration]
  172 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0U, mock_IfxPort_togglePin_getCallCount(), "LED must not toggle during init");
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\Desktop\Infineon\Workstream_3\agentic_workflow_Infineon\unity/unity_internals.h:904:184: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_UINT32'
  904 | #define UNITY_TEST_ASSERT_EQUAL_UINT32(expected, actual, line, message)                          UnityAssertEqualNumber((UNITY_INT)(UNITY_UINT32)(expected), (UNITY_INT)(UNITY_UINT32)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_UINT32)
      |                                                                                                                                                                                        ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_gcbehanp\test\test_gtm_tom_3_phase_inverter_pwm.c:172:5: note: in expansion of macro 'TEST_ASSERT_EQUAL_UINT32_MESSAGE'
  172 |     TEST_ASSERT_EQUAL_UINT32_MESSAGE(0U, mock_IfxPort_togglePin_getCallCount(), "LED must not toggle during init");
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
